--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -4,6 +4,7 @@ body {
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 
 	> main {
 		position: relative;
