--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -15,6 +15,7 @@ $icons8-var-coach: "\f100";
 $icons8-var-email-envelope: "\f10c";
 $icons8-var-facebook: "\f10a";
 $icons8-var-gender-neutral-user: "\f112";
+$icons8-var-google: "\f118";
 $icons8-var-instagram: "\f108";
 $icons8-var-left-arrow: "\f10b";
 $icons8-var-location-marker: "\f106";
