--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -81,7 +81,7 @@ body {
 		}
 
 		span {
-			font-weight: 600;
+			font-weight: bold;
 			font-size: 1.05rem;
 			color: $theme-primary-light;
 			margin-left: .3rem;
