--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -120,6 +120,7 @@ body {
 				color: #989898;
 				font-weight: 600;
 				font-size: 1.65rem;
+				line-height: 1.8;
 			}
 		}
 	}
@@ -263,6 +264,11 @@ body {
 					margin-right: 1rem;
 				}
 
+				@include as('reset') {
+					background: linear-gradient(211deg, $theme-primary, $theme-primary-light) !important;
+					margin-right: 1rem;
+				}
+
 				@include as('signup') {
 					background: #4A4A4A;
 				}
@@ -275,6 +281,7 @@ body {
 					font-size: 1.05rem;
 					font-weight: bold;
 					margin: 0 .4rem;
+					text-transform: capitalize;
 				}
 			}
 		}
