--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -4,10 +4,12 @@ body {
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
+	min-height: 100vh;
 	overflow-x: hidden;
 
 	> main {
 		position: relative;
+		min-height: 100vh;
 	}
 }
 
